test/scc/type/semantic-errors/004.t
struct
{
    int a[0];
};